Revision history for Perl extension Language::P.

0.01_04
	- Parsing:
	    - 'do' in its various forms.
	    - Make eval 'string' capture all lexicals in scope.
	- Intermediate representation:
	    - Fix code generation for nested if-then-else constructs.
	- Toy runtime
	    - Execute BEGIN blocks as soon as they are parsed.
	    - Implemented eval 'string'.
	    - Basic hash implementation.

0.01_03  Sun Mar  1 17:52:48 CET 2009
	- Parsing:
	    - Pre/post increment/decrement (++ and --) operators.
	    - Bitwise negation.
	    - Parsing of heredocs in substitutions.
	- Intermediate representation:
	    - Add an intermediate representation and use it as a base
	      for the Toy and Parrot code generators.
	    - Use the same instruction set for both stack-based IR and
	      SSA/register-based IR.
	    - Use basic blocks for the IR and add some opcode metadata
	      in inc/Opcodes.pm.
	- Toy runtime:
	    - Rewrite code generation to use the new IR representation.
	- Parrot runtime:
	    - Add a basic Parrot code generator/runtime.

0.01_02  Sat Nov 22 22:23:35 CET 2008
	- Parsing:
	    - Anonymous subroutines and closed-over lexical variables.
	    - Improved parsing of dereferences using '->'.
	    - Labels, goto and loop control statements.
	    - local().
	    - continue blocks.
	    - Add file and line information to tokens and use it to
	      report parse errors.
	- Toy runtime:
	    - local() for plain scalars.
	    - Anonymous subroutines and closures.
	    - Implement all loops (for, foreach, while, until, bare blocks).
	    - Loop control statements (only when not requiring stack unwinding).
	- Move to Git on GitHub.

0.01_01  Tue Sep 16 18:17:30 CEST 2008
	- First release.
