@@ -92,6 +92,7 @@ t/parser/expressions/010_do.t
 t/parser/expressions/010_eval.t
 t/parser/expressions/010_filtetest.t
 t/parser/expressions/010_named_unary.t
+t/parser/expressions/010_require.t
 t/parser/expressions/011_relational.t
 t/parser/expressions/013_bitand.t
 t/parser/expressions/018_ternary.t
@@ -153,6 +154,7 @@ t/run/080_recursion.t
 t/run/081_context.t
 t/run/085_closure.t
 t/run/100_do_file.t
+t/run/102_require_file.t
 t/run/110_eval.t
 t/run/files/foo.pl
 t/runtime/001_load.t
