@@ -24,6 +24,10 @@ sub new {
     my $interpreter = Language::P::Toy::Value::StringNumber->new( { string => $^X } );
     $self->set_symbol( "\030", '$', $interpreter );
 
+    my $inc = Language::P::Toy::Value::Array->new;
+    $inc->push( Language::P::Toy::Value::StringNumber->new( { string => '.' } ) );
+    $self->set_symbol( 'INC', '@', $inc );
+
     return $self;
 }
 
